[package]
name = "opt-scraper"
version = "0.1.2"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.2", features = ["gzip"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
clap = "2.33.3"
lazy_static = "1.4.0"
env_logger = "0.8.3"
backoff = { version = "0.3.0", features = ["tokio"] }

[profile.release]
lto = true

[patch.crates-io]
# As of version 0.12.0, scraper's attr serialization is not deterministic.
# This is a patched version that sorts the attrs before serialization
# (see element_ref/serializable.rs:32)
scraper = { path = "thirdparty/scraper" }
